Landing page initial stylings and placeholder image created

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <h1>PNDC Homegrown Initiative</h1>
+    <!-- <img src="./img/landing_placeholder.jpg" alt="" class="responsive-img" /> -->
+    <header class="valign-wrapper">
+      <h1>PNDC Homegrown Initiative</h1>
+    </header>
+    <main></main>
+
     <script src="./js/materialize.js" async defer></script>
     <script src="./app.js" async defer></script>
   </body>
