--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
     <nav class="navbar navbar-expand-lg fixed-top fs-5 bg-light shadow">
       <div class="container-fluid">
-        <a class="navbar-brand fs-3" href="#">
+        <a class="navbar-brand fs-3 d-none d-lg-block" href="#">
           <img
             src="./img/Homegrown_crop_1.jpg"
             alt="Logo"
@@ -35,6 +35,15 @@
             height="70"
           />
           Discover Mercer County</a
+        >
+        <a class="navbar-brand fs-3 d-lg-none" href="#">
+          <img
+            src="./img/Homegrown_crop_1.jpg"
+            alt="Logo"
+            class="d-inline-block"
+            height="70"
+          />
+          Go Mercer County</a
         >
         <button
           class="navbar-toggler"
