--- a/index.html
+++ b/index.html
@@ -11,21 +11,38 @@
       content="The Penn-Northwest Company's Homegrown Initiative Site: Helping those in Mercer Country, PA, Find Work, Homes, Schools, Activities, and Community"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Bootstrap Files -->
+    <link rel="stylesheet" href="./css/bootstrap.css" />
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="./style.css" />
 
     <!--  -->
-    <link
+    <!-- <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
-    />
+    /> -->
 
     <!-- css.gg -->
     <link href="https://css.gg/css" rel="stylesheet" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg fixed-top fs-5 bg-light shadow">
+    <!-- <nav
+      id="test"
+      class="navbar navbar-expand-lg fixed-top fs-5 light-orange shadow"
+    > -->
+    <nav
+      id="test"
+      class="navbar navbar-expand-lg fixed-top fs-5 bg-light shadow"
+    >
       <div class="container-fluid">
         <a class="navbar-brand fs-3 d-none d-lg-block" href="#">
           <img
@@ -125,7 +142,7 @@
         </div>
       </div>
     </nav>
-    <header class="d-flex">
+    <header class="d-flex shadow-lg">
       <div class="container align-self-center">
         <h1
           class="display-1 text-white typewrite landing-intro"
@@ -139,12 +156,13 @@
 
     <main></main>
 
-    <script
+    <!-- <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
 
+    <script src="./js/bootstrap.bundle.js" async defer></script>
     <script src="./app.js" async defer></script>
   </body>
 </html>
