Color palatte init and 'Take The Tour' button initialized

--- a/index.html
+++ b/index.html
@@ -143,15 +143,19 @@
       </div>
     </nav>
     <header class="d-flex shadow-lg">
-      <div class="container align-self-center">
+      <div id="header-div" class="container align-self-center">
         <h1
-          class="display-1 text-white typewrite landing-intro"
+          class="display-1 text-light typewrite landing-intro text-center rounded shadow-l"
           data-period="2000"
           data-type='[ "Welcome to Mercer County!", "Work Mercer County.", "Explore Mercer County.", "Live Mercer County" ]'
         >
           Welcome to Mercer County
         </h1>
       </div>
+      <!-- <a id="tour-btn" class="btn btn-primary btn-lg" href="#" role="button"
+        >Take The Tour</a
+      > -->
+      <!-- <div class="container d-block"></div> -->
     </header>
 
     <main></main>
