--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <header class="d-flex flex-column justify-content-center shadow-lg">
       <div
         id="header-div"
-        class="container align-self-center d-flex justify-content-center"
+        class="container-fluid align-self-center d-flex justify-content-center"
       >
         <h1
           class="display-1 text-light typewrite landing-intro text-center rounded shadow-l"
@@ -156,6 +156,18 @@
           Welcome to Mercer County
         </h1>
       </div>
+      <!-- <div
+        id="header-div"
+        class="container- align-self-center d-flex justify-content-center"
+      >
+        <h1
+          class="display-1 text-light typewrite landing-intro text-center rounded shadow-l"
+          data-period="2000"
+          data-type='[ "Welcome to Mercer County!", "Work Mercer County.", "Explore Mercer County.", "Live Mercer County" ]'
+        >
+          Welcome to Mercer County
+        </h1>
+      </div> -->
       <div id="tour-btn-div" class="container d-flex justify-content-center">
         <a
           id="tour-btn"
