--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       class="navbar navbar-expand-lg fixed-top fs-5 bg-light shadow"
     >
       <div class="container-fluid">
-        <a class="navbar-brand fs-3 d-none d-lg-block" href="#">
+        <a class="navbar-brand fs-3 d-none d-lg-block" href="./index.html">
           <img
             src="./img/Homegrown_crop_1.jpg"
             alt="Logo"
