Amenities section diagonal code starter

--- a/index.html
+++ b/index.html
@@ -40,10 +40,7 @@
       id="test"
       class="navbar navbar-expand-lg fixed-top fs-5 light-orange shadow"
     > -->
-    <nav
-      id="test"
-      class="navbar navbar-expand-lg fixed-top fs-5 bg-light shadow"
-    >
+    <nav class="navbar navbar-expand-lg fixed-top fs-5 bg-light shadow">
       <div class="container-fluid">
         <a class="navbar-brand fs-3 d-none d-lg-block" href="./index.html">
           <img
@@ -169,7 +166,14 @@
       <!-- <div class="container d-block"></div> -->
     </header>
 
-    <main></main>
+    <main>
+      <section class="container-fluid px-0" id="amenities-section">
+        <div class="container-fluid bg-light" id="amenities-diagonal">
+          <div class="bg-light" id="amenities"></div>
+        </div>
+        <!-- <img class="img-fluid" src="./img/windy_road.jpg" alt="" /> -->
+      </section>
+    </main>
 
     <!-- <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
