Amenities section diagonal effect 1st draft complete

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <a
           id="tour-btn"
           class="btn btn-primary btn-lg d-inline-block"
-          href="#"
+          href="#amenities-section"
           role="button"
           >Take The Tour
           <i id="tour-btn-arrow" class="gg-arrow-down d-inline-block"></i
@@ -168,9 +168,19 @@
 
     <main>
       <section class="container-fluid px-0" id="amenities-section">
-        <div class="container-fluid bg-light" id="amenities-diagonal">
-          <div class="bg-light" id="amenities"></div>
+        <div class="diagonal-box bg-light">
+          <div id="amenities-content" class="content">
+            <div>
+              <h1>Test</h1>
+            </div>
+          </div>
         </div>
+        <!-- ORIGINAL DIAGONAL SKEW -->
+        <!-- <div class="container-fluid bg-light" id="amenities-diagonal">
+          <div class="" id="amenities">
+            <h1>Test</h1>
+          </div>
+        </div> -->
         <!-- <img class="img-fluid" src="./img/windy_road.jpg" alt="" /> -->
       </section>
     </main>
