--- a/index.html
+++ b/index.html
@@ -22,24 +22,13 @@
     />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./style.css" />
-
-    <!--  -->
-    <!-- <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    /> -->
+    <link rel="stylesheet" href="css/fancy-buttons" />
 
     <!-- css.gg -->
     <link href="https://css.gg/css" rel="stylesheet" />
     <link href="https://css.gg/arrow-down.css" rel="stylesheet" />
   </head>
   <body>
-    <!-- <nav
-      id="test"
-      class="navbar navbar-expand-lg fixed-top fs-5 light-orange shadow"
-    > -->
     <nav class="navbar navbar-expand-lg fixed-top fs-5 bg-light shadow">
       <div class="container-fluid">
         <a class="navbar-brand fs-3 d-none d-lg-block" href="./index.html">
@@ -123,7 +112,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
+              <a class="nav-link disabled">About</a>
             </li>
           </ul>
           <!-- <form class="d-flex" role="search">
@@ -146,7 +135,7 @@
         class="container-fluid align-self-center d-flex justify-content-center"
       >
         <h1
-          class="display-1 text-light typewrite landing-intro text-center rounded shadow-l"
+          class="display-1 text-light typewrite landing-intro text-center rounded shadow-l user-select-none"
           data-period="2000"
           data-type='[ "Welcome to Mercer County!", "Work Mercer County.", "Explore Mercer County.", "Live Mercer County" ]'
         >
@@ -156,40 +145,49 @@
       <div id="tour-btn-div" class="container d-flex justify-content-center">
         <a
           id="tour-btn"
-          class="btn btn-primary btn-lg d-inline-block"
+          class="btn btn-primary btn-lg d-inline-block flash-slide"
           href="#amenities-section"
           role="button"
           >Take The Tour
           <i id="tour-btn-arrow" class="gg-arrow-down d-inline-block"></i
         ></a>
       </div>
-      <!-- <div class="container d-block"></div> -->
     </header>
 
     <main>
+      <!--  -->
       <section class="container-fluid px-0" id="amenities-section">
         <div class="diagonal-box bg-light">
           <div id="amenities-content" class="content">
-            <div>
-              <h1>Test</h1>
+            <!-- Move the below div's position around to shift diagonal page content -->
+            <!-- XL -->
+            <!-- <div class="container d-none d-xl-block"></div> -->
+            <div class="container">
+              <h2 class="display-1">Looking For Work?</h2>
+              <p class="lead">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
+                odit suscipit perspiciatis? Obcaecati molestiae in, magnam unde
+                veritatis consectetur fugit dolorum, saepe ipsam iste
+                accusantium delectus error consequatur nulla et.
+              </p>
+              <div>
+                <h3 class="display-4">Find Employees</h3>
+                <!-- <button type="button" class="btn btn-secondary">
+                  Secondary
+                </button> -->
+              </div>
+              <p class="lead">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
+                odit suscipit perspiciatis? Obcaecati molestiae in, magnam unde
+                veritatis consectetur fugit dolorum, saepe ipsam iste
+                accusantium delectus error consequatur nulla et.
+              </p>
             </div>
           </div>
         </div>
-        <!-- ORIGINAL DIAGONAL SKEW -->
-        <!-- <div class="container-fluid bg-light" id="amenities-diagonal">
-          <div class="" id="amenities">
-            <h1>Test</h1>
-          </div>
-        </div> -->
-        <!-- <img class="img-fluid" src="./img/windy_road.jpg" alt="" /> -->
       </section>
+      <div id="mobile-picture-1" class="container"></div>
     </main>
-
-    <!-- <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-      crossorigin="anonymous"
-    ></script> -->
 
     <script src="./js/bootstrap.bundle.js" async defer></script>
     <script src="./app.js" async defer></script>
