Added Click for More Info Button to section:nth-of-type(1)

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <link href="https://css.gg/arrow-down.css" rel="stylesheet" />
   </head>
   <body>
+    <!------------------------------------------------------ START NAV ------------------------------------------------------>
     <nav class="navbar navbar-expand-lg fixed-top fs-5 bg-light shadow">
       <div class="container-fluid">
         <a class="navbar-brand fs-3 d-none d-lg-block" href="./index.html">
@@ -116,26 +117,27 @@
             </li>
           </ul>
           <!-- <form class="d-flex" role="search">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success" type="submit">
-              Search
-            </button>
-          </form> -->
+          <input
+          class="form-control me-2"
+          type="search"
+          placeholder="Search"
+          aria-label="Search"
+          />
+          <button class="btn btn-outline-success" type="submit">
+            Search
+          </button>
+        </form> -->
         </div>
       </div>
     </nav>
+    <!------------------------------------------------------ END NAV ------------------------------------------------------>
     <header class="d-flex flex-column justify-content-center shadow-lg">
       <div
         id="header-div"
         class="container-fluid align-self-center d-flex justify-content-center"
       >
         <h1
-          class="display-1 text-light typewrite landing-intro text-center rounded shadow-l user-select-none"
+          class="landing-intro display-1 text-light typewrite text-center rounded shadow-l user-select-none"
           data-period="2000"
           data-type='[ "Welcome to Mercer County!", "Work Mercer County.", "Explore Mercer County.", "Live Mercer County" ]'
         >
@@ -182,6 +184,14 @@
                 veritatis consectetur fugit dolorum, saepe ipsam iste
                 accusantium delectus error consequatur nulla et.
               </p>
+              <div>
+                <button class="btn btn-background-slide">
+                  Click To Learn More
+                  <div
+                    class="btn-background-slide--blue btn-background-slide-bg"
+                  ></div>
+                </button>
+              </div>
             </div>
           </div>
         </div>
