Added pictures to./img - changed index.html class names

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <!-- css.gg -->
     <link href="https://css.gg/css" rel="stylesheet" />
     <link href="https://css.gg/arrow-down.css" rel="stylesheet" />
+    <link href="https://css.gg/arrow-right.css" rel="stylesheet" />
   </head>
   <body>
     <!------------------------------------------------------ START NAV ------------------------------------------------------>
@@ -148,7 +149,7 @@
         <a
           id="tour-btn"
           class="btn btn-primary btn-lg d-inline-block flash-slide"
-          href="#amenities-section"
+          href="#work-section"
           role="button"
           >Take The Tour
           <i id="tour-btn-arrow" class="gg-arrow-down d-inline-block"></i
@@ -157,10 +158,9 @@
     </header>
 
     <main>
-      <!--  -->
-      <section class="container-fluid px-0" id="amenities-section">
-        <div class="diagonal-box bg-light">
-          <div id="amenities-content" class="content">
+      <section class="container-fluid px-0" id="work-section">
+        <div class="diagonal-box-1 bg-light">
+          <div id="work-content-mobile" class="deskewed-box-work-section">
             <!-- Move the below div's position around to shift diagonal page content -->
             <!-- XL -->
             <!-- <div class="container d-none d-xl-block"></div> -->
@@ -185,10 +185,11 @@
                 accusantium delectus error consequatur nulla et.
               </p>
               <div>
-                <button class="btn btn-background-slide">
+                <button id="work-button" class="btn btn-background-slide">
                   Click To Learn More
+                  <i class="gg-arrow-right d-inline-block"></i>
                   <div
-                    class="btn-background-slide--blue btn-background-slide-bg"
+                    class="text-light btn-background-slide--blue btn-background-slide-bg"
                   ></div>
                 </button>
               </div>
