Implemented transition-delay staggered effect to text items on index.html

--- a/index.html
+++ b/index.html
@@ -160,33 +160,35 @@
     </header>
 
     <main>
-      <section class="container-fluid px-0 scrollIn" id="work-section">
+      <section class="container-fluid px-0" id="work-section">
         <div class="diagonal-box-1 bg-light">
           <div id="work-content-mobile" class="deskewed-box-work-section">
             <!-- Move the below div's position around to shift diagonal page content -->
             <!-- XL -->
             <!-- <div class="container d-none d-xl-block"></div> -->
-            <div class="container scrollIn">
-              <h2 class="display-1">Looking For Work?</h2>
-              <p class="lead">
+            <div class="container" id="work-scrollIn-ID">
+              <h2 class="display-1 work-scrollIn-class scrollIn">
+                Looking For Work?
+              </h2>
+              <p class="lead work-scrollIn-class scrollIn">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
                 odit suscipit perspiciatis? Obcaecati molestiae in, magnam unde
                 veritatis consectetur fugit dolorum, saepe ipsam iste
                 accusantium delectus error consequatur nulla et.
               </p>
-              <div>
+              <div class="work-scrollIn-class scrollIn">
                 <h3 class="display-4">Find Employees</h3>
                 <!-- <button type="button" class="btn btn-secondary">
                   Secondary
                 </button> -->
               </div>
-              <p class="lead">
+              <p class="lead work-scrollIn-class scrollIn">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
                 odit suscipit perspiciatis? Obcaecati molestiae in, magnam unde
                 veritatis consectetur fugit dolorum, saepe ipsam iste
                 accusantium delectus error consequatur nulla et.
               </p>
-              <div>
+              <div class="work-scrollIn-class scrollIn">
                 <button id="work-button" class="btn btn-background-slide">
                   Click To Learn More
                   <i class="gg-arrow-right d-inline-block"></i>
@@ -202,7 +204,7 @@
       <div id="mobile-picture-1" class="container"></div>
 
       <!-- SECTION 2 -->
-      <section class="container-fluid px-0 scrollIn" id="amenities-section">
+      <section class="container-fluid px-0" id="amenities-section">
         <div class="diagonal-box-2 bg-light">
           <div
             id="amenities-content-mobile"
@@ -213,26 +215,26 @@
             <!-- XL -->
             <!-- <div class="container d-none d-xl-block"></div> -->
             <div class="container">
-              <h2 class="display-1">Amenities</h2>
-              <p class="lead">
+              <h2 class="display-1 amenities-scrollIn scrollIn">Amenities</h2>
+              <p class="lead amenities-scrollIn scrollIn">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
                 odit suscipit perspiciatis? Obcaecati molestiae in, magnam unde
                 veritatis consectetur fugit dolorum, saepe ipsam iste
                 accusantium delectus error consequatur nulla et.
               </p>
-              <div>
+              <div class="amenities-scrollIn scrollIn">
                 <h3 class="display-4">Events</h3>
                 <!-- <button type="button" class="btn btn-secondary">
                   Secondary
                 </button> -->
               </div>
-              <p class="lead">
+              <p class="lead amenities-scrollIn scrollIn">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
                 odit suscipit perspiciatis? Obcaecati molestiae in, magnam unde
                 veritatis consectetur fugit dolorum, saepe ipsam iste
                 accusantium delectus error consequatur nulla et.
               </p>
-              <div>
+              <div class="amenities-scrollIn scrollIn">
                 <button id="amenities-button" class="btn btn-background-slide">
                   Click To Learn More
                   <i class="gg-arrow-right d-inline-block"></i>
