Third card addedc - video preview recorded

--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
     </header>
 
     <main>
-      <section class="container-fluid px-0" id="work-section">
+      <!-------------------------------- SECTION 1 -------------------------------->
+      <section class="container-fluid px-0 shadow-lg" id="work-section">
         <div class="diagonal-box-1 bg-light">
           <div id="work-content-mobile" class="deskewed-box-work-section">
             <!-- Move the below div's position around to shift diagonal page content -->
@@ -203,8 +204,8 @@
       </section>
       <div id="mobile-picture-1" class="container"></div>
 
-      <!-- SECTION 2 -->
-      <section class="container-fluid px-0" id="amenities-section">
+      <!-------------------------------- SECTION 2 -------------------------------->
+      <section class="container-fluid px-0 shadow-lg" id="amenities-section">
         <div class="diagonal-box-2 bg-light">
           <div
             id="amenities-content-mobile"
@@ -248,6 +249,49 @@
         </div>
       </section>
       <div id="mobile-picture-2" class="container"></div>
+
+      <!-------------------------------- SECTION 3 -------------------------------->
+      <section class="container-fluid px-0 shadow-lg" id="live-section">
+        <div class="diagonal-box-3 bg-light">
+          <div id="live-content-mobile" class="deskewed-box-live-section">
+            <!-- Move the below div's position a
+              round to shift diagonal page content -->
+            <!-- XL -->
+            <!-- <div class="container d-none d-xl-block"></div> -->
+            <div class="container">
+              <h2 class="display-1 live-scrollIn scrollIn">Make A Home</h2>
+              <p class="lead live-scrollIn scrollIn">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
+                odit suscipit perspiciatis? Obcaecati molestiae in, magnam unde
+                veritatis consectetur fugit dolorum, saepe ipsam iste
+                accusantium delectus error consequatur nulla et.
+              </p>
+              <div class="live-scrollIn scrollIn">
+                <h3 class="display-4">Live Subheading</h3>
+                <!-- <button type="button" class="btn btn-secondary">
+                  Secondary
+                </button> -->
+              </div>
+              <p class="lead live-scrollIn scrollIn">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
+                odit suscipit perspiciatis? Obcaecati molestiae in, magnam unde
+                veritatis consectetur fugit dolorum, saepe ipsam iste
+                accusantium delectus error consequatur nulla et.
+              </p>
+              <div class="live-scrollIn scrollIn">
+                <button id="live-button" class="btn btn-background-slide">
+                  Click To Learn More
+                  <i class="gg-arrow-right d-inline-block"></i>
+                  <div
+                    class="text-light btn-background-slide--blue btn-background-slide-bg"
+                  ></div>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div id="mobile-picture-3" class="container"></div>
     </main>
 
     <script src="./js/bootstrap.bundle.js" async defer></script>
