--- a/index.html
+++ b/index.html
@@ -291,7 +291,10 @@
           </div>
         </div>
       </section>
-      <div id="mobile-picture-3" class="container"></div>
+      <!-- <div id="mobile-picture-3" class="container shadow-lg"></div> -->
+
+      <section class="container-fluid px-0 shadow-lg"></section>
+      <section class="container-fluid px-0 shadow-lg"></section>
     </main>
 
     <script src="./js/bootstrap.bundle.js" async defer></script>
