Removed rellax.js orange footer with header + badge is built

--- a/index.html
+++ b/index.html
@@ -293,8 +293,18 @@
       </section>
       <!-- <div id="mobile-picture-3" class="container shadow-lg"></div> -->
 
-      <section class="container-fluid px-0 shadow-lg"></section>
-      <section class="container-fluid px-0 shadow-lg"></section>
+      <!-- Windy Road Parallax Divider -->
+      <section class="container-fluid px-0"></section>
+
+      <!-- Footer -->
+      <footer class="container-fluid px-0">
+        <div class="d-flex justify-content-center">
+          <h2 class="display-2 fw-semibold">
+            <span class="badge bg-primary">Powered by</span>The Penn-Northwest
+            Homegrown Initiative
+          </h2>
+        </div>
+      </footer>
     </main>
 
     <script src="./js/bootstrap.bundle.js" async defer></script>
