Removed Orange Footer

--- a/index.html
+++ b/index.html
@@ -205,7 +205,10 @@
       <div id="mobile-picture-1" class="container"></div>
 
       <!-------------------------------- SECTION 2 -------------------------------->
-      <section class="container-fluid px-0 shadow-lg" id="amenities-section">
+      <section
+        ------------------------------class="container-fluid px-0 shadow-lg"
+        id="amenities-section"
+      >
         <div class="diagonal-box-2 bg-light">
           <div
             id="amenities-content-mobile"
@@ -296,13 +299,16 @@
       <!-- Windy Road Parallax Divider -->
       <section class="container-fluid px-0"></section>
 
-      <!-- Footer -->
+      <!-------------------------------- Footer -------------------------------->
       <footer class="container-fluid px-0">
         <div class="d-flex justify-content-center">
           <h2 class="display-2 fw-semibold">
             <span class="badge bg-primary">Powered by</span>The Penn-Northwest
             Homegrown Initiative
           </h2>
+        </div>
+        <div>
+          <!-- <img src="./img/Homegrown_crop_footer.png" alt="" /> -->
         </div>
       </footer>
     </main>
