--- a/index.html
+++ b/index.html
@@ -302,14 +302,14 @@
       <!-------------------------------- Footer -------------------------------->
       <footer class="container-fluid px-0">
         <div class="d-flex justify-content-center">
-          <h2 class="display-2 fw-semibold">
-            <span class="badge bg-primary">Powered by</span>The Penn-Northwest
-            Homegrown Initiative
+          <h2 class="display-5 fw-semibold">
+            <span id="poweredBy" class="badge bg-primary">Powered by</span>The
+            Penn-Northwest Homegrown Initiative
           </h2>
         </div>
-        <div>
-          <!-- <img src="./img/Homegrown_crop_footer.png" alt="" /> -->
-        </div>
+        <!-- <div>
+          
+        </div> -->
       </footer>
     </main>
 
