Footer First Draft Complete

--- a/index.html
+++ b/index.html
@@ -205,10 +205,7 @@
       <div id="mobile-picture-1" class="container"></div>
 
       <!-------------------------------- SECTION 2 -------------------------------->
-      <section
-        ------------------------------class="container-fluid px-0 shadow-lg"
-        id="amenities-section"
-      >
+      <section class="container-fluid px-0 shadow-lg" id="amenities-section">
         <div class="diagonal-box-2 bg-light">
           <div
             id="amenities-content-mobile"
@@ -301,11 +298,21 @@
 
       <!-------------------------------- Footer -------------------------------->
       <footer class="container-fluid px-0">
-        <div class="d-flex justify-content-center">
-          <h2 class="display-5 fw-semibold">
+        <div>
+          <h2 class="display-6 fw-semibold text-light text-center">
             <span id="poweredBy" class="badge bg-primary">Powered by</span>The
             Penn-Northwest Homegrown Initiative
           </h2>
+          <hr />
+          <div></div>
+        </div>
+        <div>
+          <p class="lead fw-bold text-light text-center">
+            Helping Those In Mercer County PA Find Jobs And Build Meaningful
+            Lives
+          </p>
+          <hr />
+          <div></div>
         </div>
         <!-- <div>
           
