Header h1 blur background saved. Neon effect css saved to cssstorage.txt

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           data-period="2000"
           data-type='[ "Welcome to Mercer County!", "Work Mercer County.", "Explore Mercer County.", "Live Mercer County" ]'
         >
-          Welcome to Mercer County
+          Welcome to Mercer County!
         </h1>
       </div>
       <div id="tour-btn-div" class="container d-flex justify-content-center">
