Added email list form in <footer>

--- a/index.html
+++ b/index.html
@@ -306,7 +306,30 @@
             >The Penn-Northwest Homegrown Initiative
           </h2>
           <hr />
-          <div></div>
+          <form>
+            <div class="input-group">
+              <!-- <label for="exampleInputEmail1" class="form-label"
+                >Enter Your Email To Join Our Mailing List!</label
+              > -->
+              <input
+                type="email"
+                class="form-control bg-light"
+                id="exampleInputEmail1"
+                placeholder="Enter Your Email For Updates!"
+                aria-describedby="emailHelp"
+              />
+              <button
+                class="btn btn-outline-secondary"
+                type="button"
+                id="button-addon1"
+              >
+                SEND
+              </button>
+              <!-- <div id="emailHelp" class="form-text">
+                We'll never share your email with anyone else.
+              </div> -->
+            </div>
+          </form>
         </div>
         <div class="divider-div d-none d-xl-block"></div>
         <div class="d-none d-xl-block">
@@ -318,7 +341,55 @@
           <div></div>
         </div>
         <!----------------------- SM -> LG SCREEN FOOTER ----------------------->
-        <h2 class="d-xl-none text-light">Test</h2>
+        <div class="d-xl-none text-light">
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+          <h2>Test</h2>
+        </div>
+
+        <!-- <h2 class="d-xl-none text-light">Test</h2> -->
       </footer>
     </main>
 
