Footer nav desktop version added

--- a/index.html
+++ b/index.html
@@ -338,56 +338,113 @@
             Lives
           </p>
           <hr />
-          <div></div>
+          <aside class="text-light" id="footerLinkList">
+            <nav>
+              <ul class="list-unstyled text-light">
+                <li>
+                  <a class="footer-list-item" href="#"
+                    >Amenities <span>&gt;</span></a
+                  >
+                </li>
+                <li>
+                  <a class="footer-list-item" href="#"
+                    >Events <span>&gt;</span></a
+                  >
+                </li>
+                <li>
+                  <a class="footer-list-item" href="#"
+                    >Live <span>&gt;</span></a
+                  >
+                </li>
+                <li>
+                  <a class="footer-list-item" href="#"
+                    >Find Work <span>&gt;</span></a
+                  >
+                </li>
+                <li>
+                  <a class="footer-list-item" href="#"
+                    >Option 4 <span>&gt;</span></a
+                  >
+                </li>
+                <li>
+                  <a class="footer-list-item" href="#"
+                    >Option 5 <span>&gt;</span></a
+                  >
+                </li>
+              </ul>
+            </nav>
+            <nav>
+              <ul class="list-unstyled text-light">
+                <li>
+                  <a class="footer-list-item" href="#"
+                    >About Us <span>&gt;</span></a
+                  >
+                </li>
+                <li>
+                  <a class="footer-list-item" href="#"
+                    >Contact Us <span>&gt;</span></a
+                  >
+                </li>
+                <li>
+                  <a class="footer-list-item" href="#"
+                    >Live <span>&gt;</span></a
+                  >
+                </li>
+                <li>
+                  <a class="footer-list-item" href="#"
+                    >Find Work <span>&gt;</span></a
+                  >
+                </li>
+                <li>
+                  <a class="footer-list-item" href="#"
+                    >Events <span>&gt;</span></a
+                  >
+                </li>
+                <li>
+                  <a class="footer-list-item" href="#"
+                    >Events <span>&gt;</span></a
+                  >
+                </li>
+              </ul>
+            </nav>
+            <nav>
+              <ul class="list-unstyled text-light">
+                <li>
+                  <a class="footer-list-item" href="#"
+                    >About Us <span>&gt;</span></a
+                  >
+                </li>
+                <li>
+                  <a class="footer-list-item" href="#"
+                    >Contact Us <span>&gt;</span></a
+                  >
+                </li>
+                <li>
+                  <a class="footer-list-item" href="#"
+                    >Live <span>&gt;</span></a
+                  >
+                </li>
+                <li>
+                  <a class="footer-list-item" href="#"
+                    >Find Work <span>&gt;</span></a
+                  >
+                </li>
+                <li>
+                  <a class="footer-list-item" href="#"
+                    >Events <span>&gt;</span></a
+                  >
+                </li>
+                <li>
+                  <a class="footer-list-item" href="#"
+                    >Events <span>&gt;</span></a
+                  >
+                </li>
+              </ul>
+            </nav>
+          </aside>
         </div>
         <!----------------------- SM -> LG SCREEN FOOTER ----------------------->
-        <div class="d-xl-none text-light">
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-          <h2>Test</h2>
-        </div>
+        <div class="d-xl-none text-light"></div>
 
         <!-- <h2 class="d-xl-none text-light">Test</h2> -->
       </footer>
